<resources>
    <string name="app_name">Hash Generator App</string>
    <string name="hint_algorithm_type">Choose Algorithm Type</string>
    <string name="placeholder_text">Enter text to secured</string>
    <string name="hint_text">Plain Text</string>
    <string name="secure_the_text_button">Secure the text</string>
    <string name="copy_button">Copy</string>
    <string name="success_copy_text">Text Copied!</string>
    <string name="error_secure_form">Please choose the algorithm and enter the plain text first</string>
    <string name="clear_button">Clear</string>
</resources>