<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="22dp"
    tools:context=".ui.home.HomeFragment"
    tools:theme="@style/Theme.HashGeneratorApp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/HeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_algorithm_type">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/algorithmChooser_autoCompleteView"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:placeholderText="@string/placeholder_text"
            app:placeholderTextAppearance="@style/RegularText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plainText_textView"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:maxLines="6"
                android:minLines="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/secure_button"
            style="@style/HeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/secure_the_text_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/button_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            style="@style/HeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@string/clear_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/red" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>